@@ -1,5 +1,5 @@
 // -*- mode:objc -*-
-// $Id: VT100Screen.h,v 1.22 2006-10-25 02:59:16 yfabian Exp $
+// $Id: VT100Screen.h,v 1.23 2006-11-04 00:31:51 yfabian Exp $
 /*
  **  VT100Screen.h
  **
@@ -32,6 +32,8 @@
 
 #define ISDOUBLEWIDTHCHARACTER(c) ((c)>=0x1000)
 
+enum { NO_CHANGE, CHANGE, CHANGE_PIXEL };
+	
 @class PTYTask;
 @class PTYSession;
 @class PTYTextView;
@@ -113,6 +115,10 @@ typedef struct screen_char_t
 
 	// Growl stuff
 	iTermGrowlDelegate* gd;
+	
+	// resize-related
+	int changeSize;
+	int newWidth,  newHeight;
 }
 
 
@@ -208,5 +214,11 @@ typedef struct screen_char_t
 - (BOOL) printToAnsi;
 - (void) setPrintToAnsi: (BOOL) aFlag;
 - (void) printStringToAnsi: (NSString *) aString;
+
+// resize-related
+- (int)changeSize;
+- (int)newWidth;
+- (int)newHeight;
+- (void) resetChangeSize;
 
 @end
